[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "peer",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
byteorder = "1.4.3"
hex = "0.4.3"
rand = "0.8.5"
url = "2.3.1"
urlencoding = "2.1.2"
