[package]
name = "tRip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
byteorder = "1.4.3"
futures = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.40"
url = "2.3.1"
urlencoding = "2.1.2"
